Change the title of the web site

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Maozhengzhao.GitHub.io</h1>
-        <p>My homepage</p>
+        <h1>Maozheng Zhao's Homepage </h1>
+        <p>Prospected Ph.D. student in Computer Vision</p>
 
 
         <p class="view"><a href="https://github.com/maozhengzhao">View My GitHub Profile</a></p>
