--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
 
 
         <p class="view"><a href="https://github.com/maozhengzhao">View My GitHub Profile</a></p>
-        <p class="view"><a href="http://portal.bupt.edu.cn/html/main/col50/2015-04/24/20150424175230592420219_1.html">yychang Cairns</a></p>
+        <p class="view"><a href="http://bt.byr.cn/">BT of BUPT</a></p>
       </header>
       <section>
         <h3>
+<a id="welcome-to-my-homepage" class="anchor" href="#welcome-to-my-homepage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p>I'm currently a master student at BUPT, my research interest is computer vision.</p>
+
+<h3>
+
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
