--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 <p>I'm currently a master student at BUPT, my research interest is computer vision.</p>
 
 <h3>
+  
+<a id="Publications" class="anchor" href="#Publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+
+<p><a href="http://www.inderscienceonline.com/doi/abs/10.1504/IJCSM.2013.058064">[1] Mu, Linlin, Maozheng Zhao, and Chaozhu Zhang. "Quantum particle swarm optimisation based on chaotic mutation for automatic parameters determination of pulse coupled neural network." International Journal of Computing Science and Mathematics 4, no. 4 (2013): 354-362.</a>
+
+<h3>
 
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
