--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   
 <a id="Publications" class="anchor" href="#Publications" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
 
-<p><a href="http://www.inderscienceonline.com/doi/abs/10.1504/IJCSM.2013.058064">[1] Mu, Linlin, Maozheng Zhao, and Chaozhu Zhang. "Quantum particle swarm optimisation based on chaotic mutation for automatic parameters determination of pulse coupled neural network." International Journal of Computing Science and Mathematics 4, no. 4 (2013): 354-362.</a>
+<p><a href="http://www.inderscienceonline.com/doi/abs/10.1504/IJCSM.2013.058064">[1] Mu, Linlin, Maozheng Zhao, and Chaozhu Zhang. "Quantum particle swarm optimisation based on chaotic mutation for automatic parameters determination of pulse coupled neural network." International Journal of Computing Science and Mathematics 4, no. 4 (2013): 354-362.</a> <br>[2][2] Zhao, Maozheng, Qin Tu, Yanping Lu, Yongyu Chang, and Bo Yang. "No-reference image quality assessment based on phase congruency and spectral entropies." In Picture Coding Symposium (PCS), 2015, pp. 302-306. IEEE, 2015.
 
 <h3>
 
