--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
         <p class="view"><a href="https://github.com/maozhengzhao">View My GitHub Profile</a></p>
         <p class="view"><a href="http://bt.byr.cn/">BT of BUPT</a></p>
+        <p class="view"><img src="file:///E:\云盘同步文件夹\share\0 申请资料、文书\img-805033641-0001" >Photo</a></p>
       </header>
       <section>
         <h3>
