--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
         <p class="view"><a href="https://github.com/maozhengzhao">View My GitHub Profile</a></p>
         <p class="view"><a href="http://bt.byr.cn/">BT of BUPT</a></p>
-        <p class="view"><img src="file:///E:/img-805033641-0002.jpg" >Photo</></p>
+        <p class="view"><a href="http://d.hiphotos.baidu.com/baike/c0%3Dbaike80%2C5%2C5%2C80%2C26/sign=41beaf97eac4b7452099bf44ae957572/9213b07eca806538473c8dad96dda144ac3482bd.jpg" >Photo</a></p>
         <p class="view"><img src="file:///E:/img-805033641-0002.jpg" >Photooooo</img></p>
       </header>
       <section>
