--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
         <p class="view"><a href="https://github.com/maozhengzhao">View My GitHub Profile</a></p>
         <p class="view"><a href="http://bt.byr.cn/">BT of BUPT</a></p>
-        <p class="view"><img src="https://maozhengzhao.github.io/img-805033641-0002.jpg" >Photo</></p>
-        <p class="view"><img src="https://maozhengzhao.github.io/BUPT-Chi.pdf" >PDF</></p>
+        <p class="view"><a href="https://maozhengzhao.github.io/img-805033641-0002.jpg" >Photo</a></p>
+        <p class="view"><a href="https://maozhengzhao.github.io/BUPT-Chi.pdf" >PDF</a></p>
       </header>
       <section>
         <h3>
