--- a/index1.html
+++ b/index1.html
@@ -23,41 +23,35 @@
       </header>
       <section>
         <h3>
-<<<<<<< HEAD
+
 <a id="TOEFL-Scores" class="anchor" href="#TOEFL-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>TOEFL Scores:).</h3>
-<p>This are the TOEFL scores. </p>
-<p><img scr="./TOEFL.png" width="50" height="50"> </p>
-=======
-<a id="TOEFL-Scores" class="anchor" href="#TOEFL-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>TOEFL Scores.</h3>
-<img scr="./TOEFL.png"> 
->>>>>>> origin/master
+<p>Registration Number:0000000024598431 <br>Test Date: Jul/04/2015</p>
+<p>Reading: 26, Lisening: 26, Speaking: 23, Writing: 27 <br>Total: 102</p>
+
+
 
 <h3>
   
 <a id="GRE-Scores" class="anchor" href="#GRE-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>GRE Scores.</h3>
-<<<<<<< HEAD
+<p>Registration Number:3649400 <br>Test Date: Sep/20/2015</p>
+<p>Verbal Reasoning: 152, %Below: 54 <br> Quantitative Reasoning: 178, %Below: 98 <br>Analytical Writing: 3.5, %Below: 38</p>
 
-<p><img scr="https://maozhengzhao.github.io/GRE.png" width="50" height="50"> </p>
 
  <h3>
-<a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a> <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Undergraduate Transcript</a></h3>
+<a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a> <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Undergraduate Transcript ( GPA: 89.53)</a></h3>
 
 <h3>
   
-<a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" >Master's-Transcript</a></h3>
+<a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" >Master's Transcript ( GPA: 84.3)</a></h3>
 
 
-=======
 
-<img scr="https://maozhengzhao.github.io/GRE.png"> 
 
->>>>>>> origin/master
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
+
+
+
+     
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
