--- a/index1.html
+++ b/index1.html
@@ -19,12 +19,12 @@
         <p>Prospected Ph.D. student in Computer Vision</p>
         <p class="view"><a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></p>
         <p class="view"><a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Personal Statement</a></p>
-		<p class="view"><a href="https://maozhengzhao.github.io/index1.html" >Test Scores & Transcripts</a></p>
+	<p class="view"><a href="https://maozhengzhao.github.io/index1.html" >Test Scores & Transcripts</a></p>
       </header>
       <section>
         <h3>
 
-<a id="TOEFL-Scores" class="anchor" href="#TOEFL-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>TOEFL Scores:).</h3>
+<a id="TOEFL-Scores" class="anchor" href="#TOEFL-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>TOEFL Scores:</h3>
 <p>Registration Number:0000000024598431 <br>Test Date: Jul/04/2015</p>
 <p>Reading: 26, Lisening: 26, Speaking: 23, Writing: 27 <br>Total: 102</p>
 
@@ -32,17 +32,17 @@
 
 <h3>
   
-<a id="GRE-Scores" class="anchor" href="#GRE-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>GRE Scores.</h3>
+<a id="GRE-Scores" class="anchor" href="#GRE-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>GRE Scores:</h3>
 <p>Registration Number:3649400 <br>Test Date: Sep/20/2015</p>
 <p>Verbal Reasoning: 152, %Below: 54 <br> Quantitative Reasoning: 178, %Below: 98 <br>Analytical Writing: 3.5, %Below: 38</p>
 
 
  <h3>
-<a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Undergraduate Transcript ( GPA: 89.53)</a></h3>
+<a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Undergraduate Transcript ( GPA: 89.53) -- Click here</a></h3>
 
 <h3>
   
-<a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" >Master's Transcript ( GPA: 84.3)</a></h3>
+<a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a><a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" >Master's Transcript ( GPA: 84.3) -- Click here</a></h3>
 
 
 
