--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Maozheng Zhao's Homepage </h1>
+        <h1><a href="https://maozhengzhao.github.io/" >Maozheng Zhao's Homepage </a></p> </h1>
         <p>Prospected Ph.D. student in Computer Vision</p>
-
-
-        <p class="view"><a href="https://github.com/maozhengzhao">View My GitHub Profile</a></p>
-        <p class="view"><a href="http://bt.byr.cn/">BT of BUPT</a></p>
-        <p class="view"><img src="file:///E:/Github/maozhengzhao.github.io/img-805033641-0002.jpg" >Photo</></p>
-        <p class="view"><a href="https://maozhengzhao.github.io/index1.html" >Test Scores</a></p>
+        <p class="view"><a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></p>
+        <p class="view"><a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Personal Statement</a></p>
+      	<p class="view"><a href="https://maozhengzhao.github.io/index1.html" >Test Scores & Transcripts</a></p>
+	
+        
       </header>
       <section>
         <h3>
