--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <p>Prospected Ph.D. student in Computer Vision</p>
         <p class="view"><a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></p>
         <p class="view"><a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Personal Statement</a></p>
-      	<p class="view"><a href="https://maozhengzhao.github.io/index1.html" >Test Scores & Transcripts</a></p>
+      	<p class="view"><a href="https://maozhengzhao.github.io/index1.html" >Transcripts & Test Scores</a></p>
 	
         
       </header>
