--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       </header>
       <section>
         <h3>
-<a id="welcome-to-my-homepage" class="anchor" href="#welcome-to-my-homepage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my home page.</h3>
+<a id="welcome-to-my-homepage" class="anchor" href="#welcome-to-my-homepage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my home page！</h3>
 
 <p>I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at 2016 fall.</p>
-<p>My home page contains my CV, Personal Statement, Transcripts and Test scores. Please feel free to browse around.</p>
+<p>My home page contains my CV, Personal Statement, Transcripts and Test scores. Please feel free to browse around:)</p>
 
     </div>
     <script src="javascripts/scale.fix.js"></script>
