--- a/index1.html
+++ b/index1.html
@@ -33,8 +33,24 @@
         <h3>
 
 <a id="TOEFL-Scores" class="anchor" href="#TOEFL-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>3. TOEFL Scores:</h3>
+<table border="1">
+<tr>
 
-<p>Total: 102<br>Reading: 26, Lisening: 26, Speaking: 23, Writing: 27 </p>
+<td>Reading</td>
+<td>Lisening</td>
+<td>Speaking</td>
+<td>Writing</td>
+<td>Total</td>
+</tr>
+<tr>
+<td>26</td>
+<td>26</td>
+<td>23</td>
+<td>102</td>
+
+</tr>
+</table>
+
 
 
 
@@ -61,8 +77,6 @@
 <td>38</td>
 </tr>
 </table>
-<p>Verbal Reasoning: 152, %Below: 54 <br> Quantitative Reasoning: 170, %Below: 98 <br>Analytical Writing: 3.5, %Below: 38</p>
-
 
 
 
