--- a/index1.html
+++ b/index1.html
@@ -24,11 +24,11 @@
       <section>
       	
       	 <h3>
-<a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>1. Undergraduate Transcript ( GPA: 89.53) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Click here</a></h3>
+<a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>1. Undergraduate Transcript ( GPA: 89.53/100) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Click here</a></h3>
 
 <h3>
   
-<a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>2. Master Transcript ( GPA: 84.3) -- <a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" >Click here</a></h3>
+<a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>2. Master Transcript ( GPA: 84.3/100) -- <a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" >Click here</a></h3>
 
         <h3>
 
