--- a/index1.html
+++ b/index1.html
@@ -61,20 +61,21 @@
 
 <table border="1">
 <tr>
-<td>Verbal Reasoning:</td>
-<td>152</td>
-<td>%Below</td>
-<td>54</td>
+<td> </td>
+<td>Verbal Reasoning</td>
+<td>Quantitative Reasoning</td>
+<td>Analytical Writing</td>
 </tr>
 <tr>
-<td>Quantitative Reasoning:</td>
+<td>Score</td>
+<td>152</td>
 <td>170</td>
-<td>%Below:</td>
-<td>98</td>
-<tr>
-<td>Analytical Writing:</td>
 <td>3.5</td>
+</tr>
+<tr>
 <td>%Below:</td>
+<td>54</td>
+<td>98</td>
 <td>38</td>
 </tr>
 </table>
