--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1><a href="https://maozhengzhao.github.io/" >Maozheng Zhao's Homepage </a></p> </h1>
         <p>Prospected Ph.D. student in Computer Vision</p>
         <p class="view"><a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></p>
-        <p class="view"><a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Personal Statement</a></p>
+        <p class="view"><a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Statement of Purpose</a></p>
       	<p class="view"><a href="https://maozhengzhao.github.io/index1.html" >Transcripts & Test Scores</a></p>
 	
         
@@ -28,7 +28,7 @@
 <a id="welcome-to-my-homepage" class="anchor" href="#welcome-to-my-homepage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my home page！</h3>
 
 <p>I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at 2016 fall.</p>
-<p>My home page contains my CV, Personal Statement, Transcripts and Test scores. Please feel free to browse around:)</p>
+<p>My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</p>
 
     </div>
     <script src="javascripts/scale.fix.js"></script>
