--- a/index1.html
+++ b/index1.html
@@ -17,9 +17,9 @@
       <header>
         <h1><a href="https://maozhengzhao.github.io/" >Maozheng Zhao's Homepage </a></p> </h1>
         <p>Prospected Ph.D. student in Computer Vision</p>
-        <p class="view"><a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></p>
-        <p class="view"><a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Statement of Purpose</a></p>
-	<p class="view"><a href="https://maozhengzhao.github.io/index1.html" >Transcripts & Test Scores </a></p>
+        <h2><p class="view"><a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></p></h2>
+        <h2><p class="view"><a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Statement of Purpose</a></p></h2>
+	<h2><p class="view"><a href="https://maozhengzhao.github.io/index1.html" >Transcripts & Test Scores </a></p></h2>
       </header>
       <section>
       	
