--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
 <p>I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at 2016 fall.</p>
 <p>My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</p>
 
+<script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?u=clnR&d=_erkx_yFNJZ02RXV3duac23tVCR2L8fajJEXJXO8jbY"></script>
+
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
