--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
       <header>
         <h1><a href="https://maozhengzhao.github.io/" >Maozheng Zhao's Homepage </a></p> </h1>
         <p>Prospected Ph.D. student in Computer Vision</p>
-        <p class="view"><a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></p>
-        <p class="view"><a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Statement of Purpose</a></p>
-      	<p class="view"><a href="https://maozhengzhao.github.io/index1.html" >Transcripts & Test Scores</a></p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
 	<footer>
 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?u=clnR&d=_erkx_yFNJZ02RXV3duac23tVCR2L8fajJEXJXO8jbY"></script>
 </footer>
@@ -31,7 +33,9 @@
 
 <p>I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at 2016 fall.</p>
 <p>My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</p>
-
+<h3> class="view">1. <a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></h3>
+        <h3> class="view">2. <a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Statement of Purpose</a></h3>
+      	<h3> class="view">3. Transcripts & Test Scores</h3>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
