--- a/index.html
+++ b/index.html
@@ -36,6 +36,62 @@
 <h3> class="view">1. <a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></h3>
         <h3> class="view">2. <a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Statement of Purpose</a></h3>
       	<h3> class="view">3. Transcripts & Test Scores</h3>
+      	<h4>
+<a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>1). Undergraduate Transcript ( GPA: 89.53/100) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Click here</a></h4>
+
+<h4>
+  
+<a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>2). Master Transcript ( GPA: 84.3/100) -- <a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" >Click here</a></h4>
+
+        <h4>
+
+<a id="TOEFL-Scores" class="anchor" href="#TOEFL-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>3). TOEFL Scores:</h4>
+<table border="1">
+<tr>
+
+<td>Reading</td>
+<td>Lisening</td>
+<td>Speaking</td>
+<td>Writing</td>
+<td>Total</td>
+</tr>
+<tr>
+<td>26</td>
+<td>26</td>
+<td>23</td>
+<td>27</td>
+<td>102</td>
+
+</tr>
+</table>
+
+
+
+
+<h4>
+  
+<a id="GRE-Scores" class="anchor" href="#GRE-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>4). GRE Scores:</h4>
+
+<table border="1">
+<tr>
+<td> </td>
+<td>Verbal Reasoning</td>
+<td>Quantitative Reasoning</td>
+<td>Analytical Writing</td>
+</tr>
+<tr>
+<td>Score</td>
+<td>152</td>
+<td>170</td>
+<td>3.5</td>
+</tr>
+<tr>
+<td>%Below:</td>
+<td>54</td>
+<td>98</td>
+<td>38</td>
+</tr>
+</table>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
