--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
 
 <p>I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at 2016 fall.</p>
 <p>My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</p>
-<h3> class="view">1. <a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></h3>
-        <h3> class="view">2. <a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Statement of Purpose</a></h3>
-      	<h3> class="view">3. Transcripts & Test Scores</h3>
+<h3> 1. <a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></h3>
+        <h3> 2. <a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Statement of Purpose</a></h3>
+      	<h3> 3. Transcripts & Test Scores</h3>
       	<h4>
 <a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>1). Undergraduate Transcript ( GPA: 89.53/100) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Click here</a></h4>
 
