--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         <h3> 2. <a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Statement of Purpose</a></h3>
       	<h3> 3. Transcripts & Test Scores</h3>
       	<h4>
-<a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>1). Undergraduate Transcript ( GPA: 89.53/100) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Click here</a></h4>
+<a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;1). Undergraduate Transcript ( GPA: 89.53/100) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Click here</a></h4>
 
 <h4>
   
-<a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>2). Master Transcript ( GPA: 84.3/100) -- <a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" >Click here</a></h4>
+<a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;2). Master Transcript ( GPA: 84.3/100) -- <a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" >Click here</a></h4>
 
         <h4>
 
-<a id="TOEFL-Scores" class="anchor" href="#TOEFL-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>3). TOEFL Scores:</h4>
+<a id="TOEFL-Scores" class="anchor" href="#TOEFL-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;3). TOEFL Scores:</h4>
 <table border="1">
 <tr>
 
@@ -70,7 +70,7 @@
 
 <h4>
   
-<a id="GRE-Scores" class="anchor" href="#GRE-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>4). GRE Scores:</h4>
+<a id="GRE-Scores" class="anchor" href="#GRE-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;4). GRE Scores:</h4>
 
 <table border="1">
 <tr>
