--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
 <p>My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</p>
 <h3> 1. <a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></h3>
         <h3> 2. <a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Statement of Purpose</a></h3>
-      	<h3> 3. Transcripts & Test Scores</h3>
+      	<h3> 3. Transcripts </h3>
       	<h4>
 <a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;1). Undergraduate Transcript ( GPA: 89.53/100) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Click here</a></h4>
 
 <h4>
   
 <a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;2). Master Transcript ( GPA: 84.3/100) -- <a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" >Click here</a></h4>
-
+<h3> 4. Test Scores</h3>
         <h4>
 
 <a id="TOEFL-Scores" class="anchor" href="#TOEFL-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;3). TOEFL Scores:</h4>
