--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1><a href="https://maozhengzhao.github.io/" >Maozheng Zhao's Homepage </a></p> </h1>
-        <p>Prospected Ph.D. student in Computer Vision</p>
+        <p>Prospective Ph.D. student in Computer Vision</p>
         <p> </p>
         <p> </p>
         <p> </p>
