--- a/index.html
+++ b/index.html
@@ -33,65 +33,9 @@
 
 <p>I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at 2016 fall.</p>
 <p>My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</p>
-<h3> 1. <a href="https://maozhengzhao.github.io/CV.pdf" >CV</a></h3>
-        <h3> 2. <a href="https://maozhengzhao.github.io/Draft-PS.pdf" >Statement of Purpose</a></h3>
-      	<h3> 3. Transcripts </h3>
-      	<h4>
-<a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;1). Undergraduate Transcript ( GPA: 89.53/100) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Click here</a></h4>
+<p>I prepared different materials for different institutes, please refer to your reletive institute.</p>
 
-<h4>
-  
-<a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;2). Master Transcript ( GPA: 84.3/100) -- <a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" >Click here</a></h4>
-<h3> 4. Test Scores</h3>
-        <h4>
-
-<a id="TOEFL-Scores" class="anchor" href="#TOEFL-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;3). TOEFL Scores:</h4>
-<table border="1">
-<tr>
-
-<td>Reading</td>
-<td>Lisening</td>
-<td>Speaking</td>
-<td>Writing</td>
-<td>Total</td>
-</tr>
-<tr>
-<td>26</td>
-<td>26</td>
-<td>23</td>
-<td>27</td>
-<td>102</td>
-
-</tr>
-</table>
-
-
-
-
-<h4>
-  
-<a id="GRE-Scores" class="anchor" href="#GRE-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;4). GRE Scores:</h4>
-
-<table border="1">
-<tr>
-<td> </td>
-<td>Verbal Reasoning</td>
-<td>Quantitative Reasoning</td>
-<td>Analytical Writing</td>
-</tr>
-<tr>
-<td>Score</td>
-<td>152</td>
-<td>170</td>
-<td>3.5</td>
-</tr>
-<tr>
-<td>%Below:</td>
-<td>54</td>
-<td>98</td>
-<td>38</td>
-</tr>
-</table>
+<h3> 1. <a href="https://maozhengzhao.github.io/berkeley" >Berkeley</a></h3>
     </div>
     <script src="javascripts/scale.fix.js"></script>
     
