--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
         <h3>
 <a id="welcome-to-my-homepage" class="anchor" href="#welcome-to-my-homepage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my home page！</h3>
 
-<p>I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at 2016 fall.</p>
+<p>I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision, especially in using large scale visual data to help computers to understand the visual 
+contents. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at 2016 fall.</p>
 <p>My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</p>
 <p>I prepared different materials for different institutes, please refer to your reletive institute.</p>
 
