--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <p>I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision, especially in using large scale visual data to help computers to understand the visual 
 contents. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at 2016 fall.</p>
 <p>My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</p>
-<p>I prepared different materials for different institutes, please refer to your reletive institute.</p>
+<p>I've prepared different materials for different institutes, please refer to your reletive institute.</p>
 
 <h3> 1. <a href="https://maozhengzhao.github.io/berkeley" >Berkeley</a></h3>
     </div>
