--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         
       </header>
       <section>
+      	<img src="DSC_0547(2cun).jpg" width="165" height="60" />
         <h3>
 <a id="welcome-to-my-homepage" class="anchor" href="#welcome-to-my-homepage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my home page！</h3>
 
