--- a/berkeley.html
+++ b/berkeley.html
@@ -22,6 +22,16 @@
         <p> </p>
         <p> </p>
         <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
+        <p> </p>
 	<footer>
 <script type="text/javascript" id="clustrmaps" src="//cdn.clustrmaps.com/map_v2.js?u=clnR&d=_erkx_yFNJZ02RXV3duac23tVCR2L8fajJEXJXO8jbY"></script>
 </footer>
@@ -35,10 +45,10 @@
 <a id="welcome-to-my-homepage" class="anchor" href="#welcome-to-my-homepage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my home page！</h3>
 
 <p>I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision, especially in using large scale visual data to help computers to understand the visual 
-contents. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at 2016 fall.</p>
+contents. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at fall 2016.</p>
 <p>My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</p>
 <h3> 1. <a href="https://maozhengzhao.github.io/CV-berkeley.pdf" >CV</a></h3>
-        <h3> 2. <a href="https://maozhengzhao.github.io/SOP-berkeley.pdf" >Statement of Purpose</a></h3>
+        <h3> 2. <a href="https://maozhengzhao.github.io/SOP-berkeley-line.pdf" >Statement of Purpose</a></h3>
       	<h3> 3. Transcripts </h3>
       	<h4>
 <a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;1). Undergraduate Transcript ( GPA: 89.53/100) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Click here</a></h4>
