--- a/berkeley.html
+++ b/berkeley.html
@@ -44,9 +44,9 @@
         <h3>
 <a id="welcome-to-my-homepage" class="anchor" href="#welcome-to-my-homepage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my home page！</h3>
 
-<p>I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision, especially in using large scale visual data to help computers to understand the visual 
-contents. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at fall 2016.</p>
-<p>My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</p>
+<p><font color="black">I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision, especially in using large scale visual data to help computers to understand the visual 
+contents. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at fall 2016.</font></p>
+<p><font color="black">My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</font></p>
 <h3> 1. <a href="https://maozhengzhao.github.io/CV-berkeley.pdf" >CV</a></h3>
         <h3> 2. <a href="https://maozhengzhao.github.io/SOP-berkeley-1116.pdf" >Statement of Purpose</a></h3>
       	<h3> 3. Transcripts </h3>
@@ -63,18 +63,18 @@ contents. It is expected that I will finish my Master's study at Mar. 2016. I'm 
 <table border="1">
 <tr>
 
-<td>Reading</td>
-<td>Lisening</td>
-<td>Speaking</td>
-<td>Writing</td>
-<td>Total</td>
+<td><font color="black">Reading</font></td>
+<td><font color="black">Lisening</font></td>
+<td><font color="black">Speaking</font></td>
+<td><font color="black">Writing</font></td>
+<td><font color="black">Total</font></td>
 </tr>
 <tr>
-<td>26</td>
-<td>26</td>
-<td>23</td>
-<td>27</td>
-<td>102</td>
+<td><font color="black">26</font></td>
+<td><font color="black">26</font></td>
+<td><font color="black">23</font></td>
+<td><font color="black">27</font></td>
+<td><font color="black">102</font></td>
 
 </tr>
 </table>
@@ -89,21 +89,21 @@ contents. It is expected that I will finish my Master's study at Mar. 2016. I'm 
 <table border="1">
 <tr>
 <td> </td>
-<td>Verbal Reasoning</td>
-<td>Quantitative Reasoning</td>
-<td>Analytical Writing</td>
+<td><font color="black">Verbal Reasoning</font></td>
+<td><font color="black">Quantitative Reasoning</font></td>
+<td><font color="black">Analytical Writing</font></td>
 </tr>
 <tr>
-<td>Score</td>
-<td>152</td>
-<td>170</td>
-<td>3.5</td>
+<td><font color="black">Score</font></td>
+<td><font color="black">152</font></td>
+<td><font color="black">170</font></td>
+<td><font color="black">3.5</font></td>
 </tr>
 <tr>
-<td>%Below:</td>
-<td>54</td>
-<td>98</td>
-<td>38</td>
+<td><font color="black">%Below:</font></td>
+<td><font color="black">54</font></td>
+<td><font color="black">98</font></td>
+<td><font color="black">38</font></td>
 </tr>
 </table>
     </div>
