--- a/berkeley.html
+++ b/berkeley.html
@@ -44,8 +44,8 @@
         <h3>
 <a id="welcome-to-my-homepage" class="anchor" href="#welcome-to-my-homepage" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to my home page！</h3>
 
-<p><font color="black">I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision, especially in using large scale visual data to help computers to understand the visual 
-contents. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at fall 2016.</font></p>
+<p><font color="black"><strong> I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision, especially in using large scale visual data to help computers to understand the visual 
+contents. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at fall 2016.</strong> </font></p>
 <p><font color="black">My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</font></p>
 <h3> 1. <a href="https://maozhengzhao.github.io/CV-berkeley.pdf" >CV</a></h3>
         <h3> 2. <a href="https://maozhengzhao.github.io/SOP-berkeley-1116.pdf" >Statement of Purpose</a></h3>
