--- a/berkeley.html
+++ b/berkeley.html
@@ -47,8 +47,8 @@
 <p style="font-family:times;color:black"> I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision, especially in using large scale visual data to help computers to understand the visual 
 contents. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at fall 2016. </p>
 <p style="font-family:times;color:black">My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</p>
-<h3> 1. <a href="https://maozhengzhao.github.io/CV-berkeley.pdf" ><strong> CV</strong> </a></h3>
-        <h3> 2. <a href="https://maozhengzhao.github.io/SOP-berkeley-1116.pdf" ><strong> Statement of Purpose</strong> </a></h3>
+<h3> 1. <a href="https://maozhengzhao.github.io/CV-berkeley.pdf" ><u> CV </u></a></h3>
+        <h3> 2. <a href="https://maozhengzhao.github.io/SOP-berkeley-1116.pdf" ><u> Statement of Purpose</u> </a></h3>
       	<h3> 3. Transcripts </h3>
       	<h4>
 <a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;1). Undergraduate Transcript ( GPA: 89.53/100) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Click here</a></h4>
@@ -60,21 +60,21 @@ contents. It is expected that I will finish my Master's study at Mar. 2016. I'm 
         <h4>
 
 <a id="TOEFL-Scores" class="anchor" href="#TOEFL-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;1). TOEFL Scores:</h4>
-<table border="1">
+<table border="1" style="font-family:times;color:black">
 <tr>
 
-<td><font color="black";font-family=times>Reading</font></td>
-<td><font color="black">Lisening</font></td>
-<td><font color="black">Speaking</font></td>
-<td><font color="black">Writing</font></td>
-<td><font color="black">Total</font></td>
+<td>Reading</td>
+<td>Lisening</td>
+<td>Speaking</td>
+<td>Writing</td>
+<td>Total</td>
 </tr>
 <tr>
-<td><font color="black">26</font></td>
-<td><font color="black">26</font></td>
-<td><font color="black">23</font></td>
-<td><font color="black">27</font></td>
-<td><font color="black">102</font></td>
+<td>26</td>
+<td>26</td>
+<td>23</td>
+<td>27</td>
+<td>102</td>
 
 </tr>
 </table>
@@ -86,24 +86,24 @@ contents. It is expected that I will finish my Master's study at Mar. 2016. I'm 
   
 <a id="GRE-Scores" class="anchor" href="#GRE-Scores" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;2). GRE Scores:</h4>
 
-<table border="1">
+<table border="1" style="font-family:times;color:black">
 <tr>
 <td> </td>
-<td><font color="black">Verbal Reasoning</font></td>
-<td><font color="black">Quantitative Reasoning</font></td>
-<td><font color="black">Analytical Writing</font></td>
+<td>Verbal Reasoning</td>
+<td>Quantitative Reasoning</td>
+<td>Analytical Writing</td>
 </tr>
 <tr>
-<td><font color="black">Score</font></td>
-<td><font color="black">152</font></td>
-<td><font color="black">170</font></td>
-<td><font color="black">3.5</font></td>
+<td>Score</td>
+<td>152</td>
+<td>170</td>
+<td>3.5</td>
 </tr>
 <tr>
-<td><font color="black">%Below:</font></td>
-<td><font color="black">54</font></td>
-<td><font color="black">98</font></td>
-<td><font color="black">38</font></td>
+<td>%Below:</td>
+<td>54</td>
+<td>98</td>
+<td>38</td>
 </tr>
 </table>
     </div>
