--- a/berkeley.html
+++ b/berkeley.html
@@ -51,11 +51,11 @@ contents. It is expected that I will finish my Master's study at Mar. 2016. I'm 
         <h3> 2. <a href="https://maozhengzhao.github.io/SOP-berkeley-1116.pdf" ><u> Statement of Purpose</u> </a></h3>
       	<h3> 3. Transcripts </h3>
       	<h4>
-<a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;1). Undergraduate Transcript ( GPA: 89.53/100) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Click here</a></h4>
+<a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;1). Undergraduate Transcript ( GPA: 89.53/100) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" ><u>Click here</u></a></h4>
 
 <h4>
   
-<a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;2). Master Transcript ( GPA: 84.3/100) -- <a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" >Click here</a></h4>
+<a id="Master's-Transcript" class="anchor" href="#Master's-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;2). Master Transcript ( GPA: 84.3/100) -- <a href="https://maozhengzhao.github.io/BUPT-EC-ALL.pdf" ><u>Click here</u></a></h4>
 <h3> 4. Test Scores</h3>
         <h4>
 
