--- a/USC.html
+++ b/USC.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://maozhengzhao.github.io/berkeley.html" >Maozheng Zhao's Homepage </a></p> </h1>
+        <h1><a href="https://maozhengzhao.github.io/USC.html" >Maozheng Zhao's Homepage </a></p> </h1>
         <p>Prospective Ph.D. student in Computer Vision</p>
         <p> </p>
         <p> </p>
@@ -47,8 +47,8 @@
 <p>I'm currently a third grade master student at Beijing University of Posts and Telecommunicaitons, my research interest lies in the field of  Computer Vision, especially in using large scale visual data to help computers to understand the visual 
 contents. It is expected that I will finish my Master's study at Mar. 2016. I'm looking for a Ph.D. possition admitting at fall 2016.</p>
 <p>My home page contains my CV, Statement of Purpose, Transcripts and Test scores. Please feel free to browse around. : )</p>
-<h3> 1. <a href="https://maozhengzhao.github.io/CV-berkeley.pdf" >CV</a></h3>
-        <h3> 2. <a href="https://maozhengzhao.github.io/SOP-berkeley-11.16.pdf" >Statement of Purpose</a></h3>
+<h3> 1. <a href="https://maozhengzhao.github.io/CV-USC-upload.pdf" >CV</a></h3>
+        <h3> 2. <a href="https://maozhengzhao.github.io/SOP-USC-cv-new.pdf" >Statement of Purpose</a></h3>
       	<h3> 3. Transcripts </h3>
       	<h4>
 <a id="Undergraduat-Transcript" class="anchor" href="#Undergraduat-Transcript" aria-hidden="true"><span class="octicon octicon-link"></span></a>&nbsp;&nbsp;&nbsp;&nbsp;1). Undergraduate Transcript ( GPA: 89.53/100) -- <a href="https://maozhengzhao.github.io/HEU-CE-ALL.pdf" >Click here</a></h4>
